made lots of changes to fix overflow issues on mobile.  no good solutions.

--- a/checklist-users/src/App.css
+++ b/checklist-users/src/App.css
@@ -3,4 +3,6 @@
 .App {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  position: fixed;
 }
